# fasta

./: README.md  fasta.py  setup.cfg
src/fasta/: __init__.py  fasta.py
src/fasta.egg-info/: PKG-INFO  SOURCES.txt
