[metadata]
name = fasta
version = 0.0.1
author = Cameron Hyde
author_email = chyde@neoformit.com
description = Read and write FASTA formatted biological sequence files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neoformit/fasta
project_urls =
    Bug Tracker = https://github.com/neoformit/fasta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.2

[options.packages.find]
where = src
